Changing web xml to point to a more appropriate path

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <servlet>
-        <servlet-name>Claims</servlet-name>
+        <servlet-name>DestinyClanAdvisor</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
@@ -11,7 +11,7 @@
         </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Claims</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <servlet-name>DestinyClanAdvisor</servlet-name>
+        <url-pattern>/v1/*</url-pattern>
     </servlet-mapping>
 </web-app>
