--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 
     <properties>
         <jersey.version>2.6</jersey.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
